--- a/frontend/src/app/modulos/compras/pages/agregar/agregar.component.html
+++ b/frontend/src/app/modulos/compras/pages/agregar/agregar.component.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog modal-xl" >
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Buscar Usuario</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Buscar Proveedor</h5>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -29,7 +29,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr  *ngFor="let persona of clientes" (click)="addCliente(persona)" class=" text-center hand" data-toggle="modal" data-target="#modalCli">
+                            <tr  *ngFor="let persona of clientes" (click)="addCliente(persona)" class=" text-center hand" data-toggle="modal" data-target="#modalCli" title="Hacer click para elegir Proveedor">
                                 <td>{{persona.rif}}</td>
                                 <td>{{persona.nombre}}</td>
                             </tr>
@@ -69,7 +69,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr  *ngFor="let bate of baterias" (click)="addBateria(bate)" class="text-center hand" data-toggle="modal" data-target="#modalPro">
+                            <tr  *ngFor="let bate of baterias" (click)="addBateria(bate)" class="text-center hand" data-toggle="modal" data-target="#modalPro" title="Haga click para elegir bateria">
                                 <td>{{bate.nombre}}</td>
                                 <td>{{bate.inventario}}</td>
                                 <td>{{bate.marca_id +' '+bate.amperaje_id +' '+ bate.grupo_id }}</td>
@@ -87,7 +87,7 @@
         <form class="form-neon" #form="ngForm">
             <fieldset>
                 <legend class="px-3"><span class="float-left"><i class="far fa-plus-square"></i> &nbsp; Agrega detalles
-                        de venta</span>
+                        de compra</span>
                     <span class="float-right "> <strong>Fecha </strong>{{ fecha | date:"dd/MM/yy" }} </span>
                 </legend>
                 <div class="container-fluid">
@@ -103,14 +103,14 @@
                         <div class="col-3 col-md-2 flex-bottom">
                             <div class="form-group bmd-form-group bmd-form-group-md">
                                 <button  type="button"
-                                    class="btn btn-raised btn-success btn-block" data-toggle="modal" data-target="#modalCli">Agregar</button>
+                                    class="btn btn-raised btn-success btn-block" data-toggle="modal" data-target="#modalCli">Agregar Proveedor</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
                             <div class="form-group bmd-form-group bmd-form-group-md">
                                 <label for="btnModalPro">Bateria</label>
                                 <input type="text" class="form-control hand" name="item_codigo"
-                                    id="btnModalPro" value="{{bateria.nombre +' '+ bateria.marca_id+' '+bateria.amperaje_id+' '+bateria.grupo_id}}"  required [disabled]="!venta.cliente.rif" data-toggle="modal" data-target="#modalPro">
+                                    id="btnModalPro" value="{{bateria.nombre +' '+ bateria.marca_id+' '+bateria.amperaje_id+' '+bateria.grupo_id}}"  required [disabled]="!venta.cliente.rif" data-toggle="modal" data-target="#modalPro" title="Haga click para elegir bateria">
                             </div>
                         </div>
                         <div class="col-9 col-md-2">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="col-3 col-md-2 flex-bottom">
                             <div class="form-group bmd-form-group bmd-form-group-mf">
-                                <button type="button" [disabled]="isValid()" (click)="agregarProducto()" class="btn btn-raised btn-success btn-block" >agregar</button>
+                                <button type="button" [disabled]="isValid()" (click)="agregarProducto()" class="btn btn-raised btn-success btn-block" >Agregar a compra</button>
                             </div>
                         </div>
 
