--- a/frontend/src/app/modulos/ventas/pages/listado/listado.component.html
+++ b/frontend/src/app/modulos/ventas/pages/listado/listado.component.html
@@ -9,20 +9,10 @@
                 <div class="row">
                     <legend class="px-3"><span class="float-left"><i class="far fa-plus-square"></i> &nbsp; Elige filtros para la consulta</span>
                     </legend>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12">
                         <div class="form-group bmd-form-group bmd-form-group-md">
-                            <label for="inputSearch" class="">Codigo de Factura</label>
+                            <label for="inputSearch" class="">Buscar Factura</label>
                             <input type="text" class="form-control" name="busqueda-" id="inputSearch" maxlength="30">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 ">
-                        <div class="form-group bmd-form-group bmd-form-group-md">
-                            <label for="item_estado">Usuario</label>
-                            <select class="form-control" name="item_estado" id="item_estado">
-                                <option value="" selected="" disabled="">Seleccione una opción</option>
-                                <option selected="" value="Habilitado">Habilitado</option>
-                                <option value="Deshabilitado">Deshabilitado</option>
-                            </select>
                         </div>
                     </div>
                     <legend class="px-3"><span class="float-left"><i class="far fa-plus-square"></i> &nbsp; Rango de fecha</span>
