--- a/frontend/src/app/pages/reportes/reportes.component.html
+++ b/frontend/src/app/pages/reportes/reportes.component.html
@@ -31,7 +31,7 @@
                         <input type="date" name="hastaFecha" id="hastaFecha" class="form-control">
                     </div>
                 </div>
-                <div class="col-12 col-md-12">
+                <!-- <div class="col-12 col-md-12">
                     <div class="form-group bmd-form-group bmd-form-group-lg">
                         <label class="">Tipo de reporte</label>
                         <select class="form-control">
@@ -52,7 +52,7 @@
                             <option value="3">user 3</option>
                         </select>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-12">
                     <p class="text-center">
                         <button class="btn btn-raised btn-danger btn-lg" type="button">Generar</button>
@@ -64,24 +64,7 @@
     </form>
 
 
-
-    <form action="">
-        <input type="hidden" name="eliminar-busqueda" value="eliminar">
-        <div class="container-fluid">
-            <div class="row justify-content-md-center">
-                <div class="col-12 col-md-6">
-                    <p class="text-center" style="font-size: 20px;">
-                        Reporte Generado
-                    </p>
-                </div>
-            </div>
-        </div>
-    </form>
-
-
-
-
-    <div class="table-responsive">
+    <!-- <div class="table-responsive">
         <table class="table table-dark table-sm">
             <thead>
                 <tr class="text-center roboto-medium">
@@ -134,4 +117,4 @@
             </li>
         </ul>
     </nav>
-</div>
+</div> -->
