--- a/frontend/src/app/components/page-header/page-header.component.html
+++ b/frontend/src/app/components/page-header/page-header.component.html
@@ -2,4 +2,7 @@
     <h3 class="text-left">
         <i class="{{icono}} fas fa-fw"></i> &nbsp; {{ titulo }}
     </h3>
+    <p class="text-justify" *ngIf="mensaje">
+        {{mensaje}}
+    </p>
 </div> 
