--- a/frontend/src/app/pages/clientes/agregar/agregar.component.html
+++ b/frontend/src/app/pages/clientes/agregar/agregar.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="alert alert-danger" role="alert" *ngIf="registrado">
-        El cliente ha sido registrado 
+        {{mensaje}}
     </div>
     <form #formulario="ngForm" autocomplete="off" >
         <fieldset>
-            <legend><i class="fas fa-user"></i> &nbsp; Información básica</legend>
+            <legend class="mb-3"><i class="fas fa-user"></i> &nbsp; Información básica</legend>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
