--- a/frontend/src/app/pages/clientes/listar/listar.component.html
+++ b/frontend/src/app/pages/clientes/listar/listar.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title mb-3 text-center"  id="exampleModalLabel">Agregar Cliente</h5>
+                <h3 class="modal-title mb-3 text-center"  id="exampleModalLabel">Agregar Cliente</h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -18,7 +18,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Actualizar Cliente: </h5>
+                <h3 class="modal-title mb-3 text-center" id="exampleModalLabel">Actualizar Cliente: </h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -71,9 +71,6 @@
                         <a class="btn btn-success" data-toggle="modal" data-target="#modalActualizar" (click)="agregarCliente(cliente)">
                             <i class="fas fa-sync-alt"></i>
                         </a> 
-                        <a [routerLink]="['/clientes/cliente', 1]" class="btn btn-success">
-                            <i class="fas fa-eye"></i>
-                        </a>
                     </td>
                 </tr>
             </tbody>
