--- a/frontend/src/app/pages/productos/agregar/agregar.component.html
+++ b/frontend/src/app/pages/productos/agregar/agregar.component.html
@@ -1,60 +1,72 @@
 <div class="container-fluid">
-    <form class="form-neon" >
+    <div class="alert alert-success" *ngIf="registrado">
+        <span class="text-center">{{mensaje}}</span>
+    </div>
+    <form #formPro="ngForm" (submit)="registrarProducto(formPro)" >
         <fieldset>
-            <legend><i class="far fa-plus-square"></i> &nbsp; Información del Producto</legend>
+            <legend><i class="far fa-plus-square mb-3"></i> &nbsp; Información del Producto</legend>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-6">
                         <div class="form-group bmd-form-group bmd-form-group-md">
-                            <label for="item_codigo">Nombre</label>
-                            <input type="text" pattern="[a-zA-Z0-9-]{1,45}" class="form-control" name="item_codigo" id="item_codigo" maxlength="45">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ0-9 ]{1,40}" class="form-control" name="nombre"
+                                id="nombre" maxlength="100" [(ngModel)]="producto.nombre" #nombre="ngModel" required>
                         </div>
                     </div>
-                    
+
                     <div class="col-12 col-md-6">
                         <div class="form-group bmd-form-group bmd-form-group-md">
                             <label for="item_estado">Marca</label>
-                            <select class="form-control" name="item_estado" id="item_estado">
+                            <select class="form-control" name="item_estado" id="item_estado" required
+                                [(ngModel)]="producto.marca_id" #marca="ngModel">
                                 <option value="" selected="" disabled="">Seleccione una opción</option>
-                                <option selected="" value="Habilitado">Habilitado</option>
-                                <option value="Deshabilitado">Deshabilitado</option>
+                                <option value="ETNA">ETNA</option>
+                                <option value="TITAN">TITAN</option>
+                                <option value="DUNCAN">DUNCAN</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="form-group bmd-form-group bmd-form-group-md">
-                            <label for="item_estado">Grupo</label>
-                            <select class="form-control" name="item_estado" id="item_estado">
+                            <label for="item">Grupo</label>
+                            <select class="form-control" name="item" id="item_estado" required
+                                [(ngModel)]="producto.grupo_id" #grupo="ngModel">
                                 <option value="" selected="" disabled="">Seleccione una opción</option>
-                                <option selected="" value="Habilitado">Habilitado</option>
-                                <option value="Deshabilitado">Deshabilitado</option>
+                                <option value="24MR">24MR</option>
+                                <option value="34MR">34MR</option>
+                                <option value="31T">31T</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="form-group bmd-form-group bmd-form-group-md">
-                            <label for="item_estado">Amperaje</label>
-                            <select class="form-control" name="item_estado" id="item_estado">
+                            <label for="estado">Amperaje</label>
+                            <select class="form-control" name="amperaje" id="estado" 
+                             [(ngModel)]="producto.amperaje_id" #amperaje="ngModel" required>
                                 <option value="" selected="" disabled="">Seleccione una opción</option>
-                                <option selected="" value="Habilitado">Habilitado</option>
-                                <option value="Deshabilitado">Deshabilitado</option>
+                                <option value="700">700</option>
+                                <option value="1000">1000</option>
                             </select>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <!-- <div class="col-12 col-md-6">
                         <div class="form-group bmd-form-group bmd-form-group-md">
                             <label for="item_detalle">Foto</label>
                             <input type="file" class="form-control" name="item_detalle" id="item_detalle" maxlength="190">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </fieldset>
-        <br><br><br>
-        <p class="text-center" style="margin-top: 40px;">
-            <button type="reset" class="btn btn-raised btn-secondary btn-sm"><i class="fas fa-paint-roller"></i> &nbsp; LIMPIAR</button>
-            &nbsp; &nbsp;
-            <button type="submit" class="btn btn-raised btn-info btn-sm"><i class="far fa-save"></i> &nbsp; GUARDAR</button>
+        <div class="bd-callout-danger bd-callout" *ngIf="formPro.touched && formPro.invalid">
+            <p *ngIf="formPro.invalid">Todos los campos son obligatorios</p>
+            <p *ngIf="nombre.invalid && !(producto.nombre.length === 0)">El campo nombre no admite carateres especiales</p>            
+        </div>
+        <br><br>
+        <p class="text-center">
+            <button type="submit" class="btn btn-raised btn-info btn-lg" [disabled]="formPro.invalid"><i class="far fa-save"></i> &nbsp;
+                {{boton}}</button>
         </p>
     </form>
 </div>
