--- a/frontend/src/app/pages/proveedores/listar/listar.component.html
+++ b/frontend/src/app/pages/proveedores/listar/listar.component.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agregar Proveedor</h5>
+                <h3 class="modal-title mb-3" id="exampleModalLabel">Agregar Proveedor</h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -20,7 +20,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Actualizar Proveedor: {{proveedor.nombre}}</h5>
+                <h3 class="modal-title mb-3" id="exampleModalLabel">Actualizar Proveedor: {{proveedor.nombre}}</h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
