--- a/frontend/src/app/components/user-dropdown/user-dropdown.component.html
+++ b/frontend/src/app/components/user-dropdown/user-dropdown.component.html
@@ -1,11 +1,11 @@
 <a
-  class="text-gray-600 block"
-  href="#pablo"
+  class="text-gray-600 block rounded px-3 py-1 cursor-pointer"
   (click)="toggleDropdown($event)" #btnDropdownRef
 >
   <div class="items-center flex">
+    <img src="/assets/img/avatar.png" alt="logo" class="rounded-full h-12 mr-2">
     <span
-      class="text-base box-content text-white rounded bg-transparent p-4 hover:shadow-lg"
+      class="text-base box-content font-bold rounded bg-transparent hidden md:block"
     >
       melendez12341
     </span>
