--- a/frontend/src/app/main/pages/main/main.component.html
+++ b/frontend/src/app/main/pages/main/main.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-sidebar></app-sidebar>
+<div class="lg:ml-64">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</div>
