--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -6,9 +6,11 @@
     <div class="container mx-auto px-4 h-full">
       <div class="flex content-center items-center justify-center h-full">
         <div class="w-full lg:w-2/5 px-4">
+          <app-alert [mensaje]="mensaje" [color]="color" (cerrar)="onCerrar($event)" *ngIf="error"></app-alert>
           <div
             class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-200 border-0"
           >
+          
             <div class="rounded-t mb-0 px-6 py-6">
               <div class="text-center mb-3">
                 <img src="/assets/img/logo2.png" alt="icono" class="w-1/2 mx-auto">
@@ -16,6 +18,7 @@
             </div>
             
             <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
+                
                <form #formLogin="ngForm" autocomplete="off" (ngSubmit)="onSubmit()">
                 <div class="relative w-full mb-3">
                   <label
